# shekere

./: .gitignore  .prototools  .taurignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.backup  GEMINI.md  Info.plist  LICENSE  README.md  clippy.toml  entitlements.plist  index.html  package-lock.json  package.json  styles.css  tarpaulin.toml  tauri.conf.json  test.wgsl  test_config.toml  tsconfig.json  visualizer.html  vite.config.ts
.github/workflows/: build.yaml  ci.yaml  ci.yml  docs.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_patterns.md  project_overview.md  shader_development_guide.md  suggested_commands.md  task_completion_checklist.md
adr/: 0001-initial-architecture-and-tech-stack.md  0001-initial-architecture-and-tech-stack.md.md  0002-control-panel-activity-visualization.md  0003-multiple-sketches-switching.md  0004-meyda-audio-feature-extraction.md  0005-tsl-and-webgpu-support.md  0006-raw-audio-waveform-access.md  0007-camera-input.md  0008-gpu-camera-motion-mask.md  0009-host-managed-gpu-feedback.md
assets/shaders/: combined_shader.wgsl  dynamic_shader.wgsl
capabilities/: default.json
docs/: api-reference.md  guide.md  index.md
docs/.vitepress/: config.ts
docs/design/: architecture.md  configuration.md  hot-reload.md  midi.md  multi-pass-shaders.md  osc.md  spectrum.md
docs/guide/: audio.md  camera-motion.md  camera.md  effects.md  getting-started.md  gpu-feedback.md  index.md  midi.md  osc.md  playlist.md  shaders.md  writing-sketches.md
docs/ja/: index.md
examples/: advanced_audio.js  audio_reactive_knot.js  camera_audio_reactive.js  camera_cube.js  camera_input.js  camera_motion_aura.js  camera_motion_ripple.js  effects_showcase.js  feedback_particles.js  hello_world.js  image_sample.js  midi_reactive.js  my_sketch.js  oscilloscope.js  playlist.toml  shader_stars.js  spectrum.js  tidal_reactive.js  tsuki.toml
examples/auto_include_test/: config.toml  fragment.wgsl
examples/basic/: basic.toml  fragment.wgsl
examples/circular/: circular.toml  fragment.wgsl
examples/midi/: fragment.wgsl  midi.toml
examples/midi_history/: fragment.wgsl  midi_history.toml
examples/mouse/: fragment.wgsl  mouse.toml
examples/mouse_history/: fragment.wgsl  mouse_history.toml
examples/multi_pass/: README.md  blur.wgsl  multi_pass.toml  scene.wgsl
examples/osc/: fragment.wgsl  osc.tidal  osc.toml
examples/persistent/: README.md  persistent.toml  trail.wgsl
examples/ping_pong/: README.md  game_of_life.toml  game_of_life.wgsl  kaleidoscope.toml  kaleidoscope.wgsl  reaction_diffusion.toml  reaction_diffusion.wgsl
examples/spectrum/: fragment.wgsl  spectrum.toml
icons/: icon.icns
shaders/: common.wgsl  core.wgsl  fragment.wgsl  midi.wgsl  mouse.wgsl  osc.wgsl  spectrum.wgsl  texture.wgsl  vertex.wgsl
shekere-cli/: Cargo.toml
shekere-cli/src/: main.rs
shekere-cli/tests/: cli_argument_validation_test.rs  cli_binary_verification_test.rs  cli_compatibility_baseline_test.rs  cli_error_handling_test.rs  cli_performance_baseline_test.rs
shekere-core/: Cargo.toml  WASM-IPC-Integration.md  WASM-README.md  build-wasm.sh  test.html  wasm-pack.toml
shekere-core/src/: bind_group_factory.rs  config.rs  hot_reload.rs  ipc_protocol.rs  lib.rs  midi.rs  osc.rs  pipeline.rs  renderer.rs  shader_preprocessor.rs  state.rs  texture_manager.rs  time_uniform.rs  timer.rs  uniform_manager.rs  uniform_manager_minimal.rs  uniforms.rs  vertex.rs  wasm.rs  webgpu_context.rs  window_uniform.rs
shekere-core/src/inputs/: midi.rs  mod.rs  mouse.rs
shekere-core/src/uniforms/: window_uniform.rs
shekere-core/src/wasm/: shader_loader_wasm.rs  simple_webgl2_renderer.rs  wasm_multi_pass_pipeline.rs  wasm_renderer.rs  wasm_texture_manager.rs  webgl2_context_wasm.rs  webgl2_renderer_wasm.rs  webgpu_context_wasm.rs
shekere-core/tests/: headless_rendering.rs  hot_reload_bind_group_test.rs  hot_reload_error_handling_test.rs  hot_reload_integration.rs  multi_pass_integration.rs  persistent_texture_integration.rs  ping_pong_buffer_test.rs  render_baseline_test.rs  render_pipeline_test.rs
shekere-core/tests/shaders/: blur.wgsl  life.wgsl  test.wgsl
shekere-gui/: index.html  package-lock.json  package.json  test_wasm_basic.html  test_wasm_initialization.html  vite.config.js  webgpu_test.html
shekere-gui/src-tauri/: Cargo.toml  tauri.conf.json
shekere-gui/src-tauri/capabilities/: default.json
shekere-gui/src-tauri/src/: commands.rs  commands_old.rs  file_tree.rs  main.rs  native_renderer.rs  window_manager.rs
src/: App.tsx  audioAnalysis.test.ts  audioAnalysis.ts  audioCaptureLifecycle.test.ts  audioCaptureLifecycle.ts  audio_stream.rs  basic_shader_renderer.rs  bevy_inputs.rs  bevy_rendering.rs  bind_group_factory.rs  cameraManager.test.ts  cameraManager.ts  cameraMotionAnalyzer.test.ts  cameraMotionAnalyzer.ts  cameraNodeBindings.test.ts  cameraNodeBindings.ts  config.rs  fragment.wgsl  fxSettings.test.ts  fxSettings.ts  gpuFeedback.test.ts  gpuFeedback.ts  hot_reload.rs  lib.rs  main.rs  midiState.test.ts  midiState.ts  osc.rs  oscData.test.ts  oscData.ts  pipeline.rs  playlistConfig.test.ts  playlistConfig.ts  playlistNavigation.test.ts  playlistNavigation.ts  render_constants.rs  rendererState.test.ts  rendererState.ts  sceneCleanup.test.ts  sceneCleanup.ts  (+13 more)
tests/: cli_argument_validation_test.rs  cli_binary_verification_test.rs  cli_compatibility_baseline_test.rs  cli_error_handling_test.rs  hot_reload_bevy_integration_test.rs  hot_reload_bind_group_test.rs  hot_reload_error_handling_bevy_test.rs  hot_reload_error_handling_test.rs  hot_reload_integration.rs  hot_reload_naga_validation_test.rs  hot_reload_vertex_output_stub_test.rs  multi_pass_hot_reload_test.rs  multi_pass_integration.rs  persistent_texture_config.rs  persistent_texture_integration.rs  phase4_file_tree_test.rs  phase4_preview_integration_test.rs  phase4_toml_loading_test.rs  ping_pong_buffer_test.rs  render_baseline_test.rs  render_pipeline_test.rs  state_multipass.rs  tauri_commands_test.rs  workspace_structure_test.rs
(+47 files in other folders)
