[workspace]
resolver = "2"
members = [
    "shekere-core",
    "shekere-cli",
    "shekere-gui/src-tauri",
]

[workspace.package]
version = "0.13.0"
authors = ["katk3n"]
description = "Creative coding tool with shaders and sounds"
edition = "2024"
license = "MIT"
repository = "https://github.com/katk3n/shekere"

[workspace.dependencies]
# Graphics and rendering
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "22.0"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"

# Logging and CLI
env_logger = "0.10"
log = "0.4"
clap = { version = "4.5.26", features = ["derive"] }

# Serialization
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }

# Audio and networking
rosc = "0.10.1"
async-std = "1.13.0"
cpal = "0.15.3"
ringbuf = "0.4.7"
spectrum-analyzer = "1.6.0"
midir = "0.10.0"

# File system and utilities
notify = "6.1.1"
thiserror = "1.0"

# GUI dependencies
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Dev dependencies (shared across workspace)
tempfile = "3.8.1"
tokio = { version = "1.0", features = ["full"] }