[package]
name = "shekere"
version = "0.12.0"
authors = ["katk3n"]
description = "Creative coding tool with shaders and sounds"
edition = "2024"
license = "MIT"
repository = "https://github.com/katk3n/shekere"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_winit",           # Window management
    "bevy_render",          # Rendering system
    "bevy_core_pipeline",   # Basic rendering pipeline
    "bevy_asset",           # Asset management
    "bevy_sprite",          # 2D sprite rendering
    "x11"                   # Platform support
] }
winit = { version = "0.29", features = ["rwh_05"] }  # Temporary - will be removed after migration
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
bytemuck = { version = "1.16", features = ["derive"] }
clap = { version = "4.5.26", features = ["derive"] }
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
rosc = "0.10.1"
async-std = "1.13.0"
cpal = "0.15.3"
ringbuf = "0.4.7"
spectrum-analyzer = "1.6.0"
notify = "6.1.1"
midir = "0.10.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
