[package]
name = "shekere-core"
version.workspace = true
authors.workspace = true
description = "Core library for shekere creative coding tool"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Graphics and rendering
wgpu.workspace = true
bytemuck.workspace = true
pollster.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true

# Serialization
toml.workspace = true
serde.workspace = true
serde_json = "1.0"

# Audio and networking
rosc.workspace = true
async-std.workspace = true
cpal.workspace = true
ringbuf.workspace = true
spectrum-analyzer.workspace = true
midir.workspace = true

# File system and utilities
notify.workspace = true
thiserror.workspace = true

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
    "ImageData",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuCommandEncoder",
    "GpuRenderPassEncoder",
    "GpuBuffer",
    "GpuTexture",
    "GpuTextureView",
    "GpuSampler",
    "GpuBindGroup",
    "GpuBindGroupLayout",
    "GpuPipelineLayout",
    "GpuRenderPipeline",
    "GpuShaderModule",
    "Navigator",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lib]
name = "shekere_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]