[package]
name = "shekere-gui"
version = "0.13.0"
edition = "2021"
description = "GUI application for shekere creative coding tool"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0"

# Local dependencies
shekere-core = { path = "../../shekere-core" }

# Additional dependencies for GUI functionality
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.0", features = ["v4"] }
bytemuck = { version = "1.0", features = ["derive"] }

# WebGPU and headless rendering dependencies
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
log.workspace = true

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
