[package]
name = "shekere-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI application for shekere creative coding tool"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json.workspace = true
serde.workspace = true
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0"

# Local dependencies
shekere-core = { path = "../../shekere-core" }

# Additional dependencies for GUI functionality
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
bytemuck = { version = "1.0", features = ["derive"] }

# WebGPU for texture operations (through shekere-core)
wgpu.workspace = true
# Logging - keep for error reporting
log.workspace = true
env_logger.workspace = true

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
